Import of JIMI/Tk-Markdown-0.02 from CPAN.
gitpan-cpan-distribution: Tk-Markdown
gitpan-cpan-version:      0.02
gitpan-cpan-path:         JIMI/Tk-Markdown-0.02.tar.gz
gitpan-cpan-author:       JIMI
gitpan-cpan-maturity:     released

--- a/.\Tk-Markdown/README
+++ b/.\Tk-Markdown/README
@@ -1,5 +1,10 @@
 Tk-Markdown
 
+Changes
+
+v0.02  Updated POD.
+v0.01  My first try ever of making modules on Windows (eek!)
+
 The README is used to introduce the module and provide instructions on
 how to install the module, any machine dependencies it may have (for
 example C compilers and installed libraries) and any other information
