--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Tk-Markdown
 
+0.07    2022-10-31
+        Various POD fixes and improvements, no functional changes
+        Added sample script
+        
+
 0.06    2021-09-18
         Added Github repo
         Cosmetic changes to POD and code only, no functional changes
